corrected spelling on paragraph 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <h1>hello world</h1>
-    <p>Im hosgdc with github pages</p>
+    <p>Im hosting with github pages</p>
 </body>
 
 </html>
