--- a/darren.html
+++ b/darren.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>I corrected my github error.</p>
+<h1>TCMG 412 Project 2</h1>
+<p>This is my first update to the website.</p>
 
 </body>
 </html>
