--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
     <h1>hello world</h1>
     <p>Im hosting with github pages</p>
+    <h2>Other webpage links:</h2>
+    <align ="left"><link href="jcharnas.html" rel="Jalen's Page">
 </body>
 
 </html>
