--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<!DOCTYPE html>
-<html>
+html>
+<head>
+<title>TCMG 412 GROUP 4 WEB PAGE</title>
+<!—Designed By: Group 4 -->
+</head>
+<body style = "background-color:darkseagreen;"> 
+<table align="center" width = "800px" cellpadding="15px">
+<tr>
+<td style = "background-color:dodgerblue;"> 
+<center>
+	<h1>Texas A&M University</h1>
+	<h2>Group 4</h2>
+	<h3>TCMG 412</h3>
+	<h4>September 12, 2021</h4>
+</center>
 
-<body>
-    <h1>hello world</h1>
-    <p>Im hosting with github pages</p>
+<hr style = "width: 70%">
+<nav>
+<center>
+	<a href="index.html">~Home Page~</a> |
+	<a href="Gio.html">~Gio~</a> |
+	<a href="jcharnas01.html">~Jalen~</a>
+	<a href="Cade.html">~Cade~</a>
+	<a href="jcharnas01.html">~Jalen~</a>
+</center>
+</nav>
+<hr style = "width: 70%">
+
+<hr style = "width: 70%">
+
+</td>
+</tr>
+</table>
 </body>
-
 </html>
