--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ html>
 <center>
 	<a href="index.html">~Home Page~</a> |
 	<a href="Gio.html">~Gio~</a> |
-	<a href="jcharnas01.html">~Jalen~</a>
+	<a href="jcharnas.html">~Jalen~</a>
 	<a href="Cade.html">~Cade~</a>
 	<a href="jcharnas01.html">~Jalen~</a>
 </center>
