--- a/htmlwebsite.html
+++ b/htmlwebsite.html
@@ -22,7 +22,7 @@
       <td><img src="deca.jpg" width="300" height="300" alt=""/></td>
 		<td align="center"><font size="+8" color="blue"><p>Hello!</p></font>
 			<font size="+4" color="red">
-			<p>Welcome to my TCMG 303 website</p></font>
+			<p>Welcome to my website</p></font>
 			<font size="+2" color="green"><p>My name is Jalen C.</p></font>
 
 			<font size="+2" color="green"><p>Thank you for visiting my web site.. have a nice day.</p></font></td>
