--- a/jcharnas.html
+++ b/jcharnas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TCMG 303 - Lab 5 Personal Website</title>
+<title>TCMG 412 - Lab Personal Website</title>
 </head>
 
 <body>
