--- a/Gio.html
+++ b/Gio.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Hernandez Cuevas, Giovanni: A Personal Website</title>
-<!—Designed By: Hernandez Cuevas, Giovanni: Fall 2020 ISTM 209 599-->
+<title>A Personal Website</title>
+<!—Designed By: Giovanni Hernandez Cuevas-->
 </head>
 <body style = "background-color:indianred;"> 
 <table align="center" width = "800px" cellpadding="15px">
@@ -10,16 +10,14 @@
 <center>
 	<h1>Texas A&M University</h1>
 	<h2>Giovanni Hernandez Cuevas</h2>
-	<h3>A Personal Website</h3>
-	<h4>August 25th, 2020</h4>
+	<h3>Bio</h3>
+	<h4>September 2021</h4>
 </center>
 
 <hr style = "width: 70%">
 <nav>
 <center>
-	~Home Page~ |
-	<a href="workhistory.html">~Work History~</a> |
-	<a href="mylife.html">~My Life~</a> 
+	~Home Page~ 
 </center>
 </nav>
 
@@ -44,16 +42,13 @@ In the website I included images that represent some of the most important times
 
 <p>
 My name is Giovanni Hernandez Cuevas. I was born on July 10th, 1997 in <a href="https://www.history.com/topics/mexico/san-luis-potosi">San Luis Potosi, Mexico</a>.
-I lived my whole life in Mexico until I started my college education in 2018. I applied for an International Student Visa to study Computer Science at <a href="https://www.lonestar.edu/northharris.htm">Lone Star College North Harris</a>, which is located in Houston, Texas.
-My International Student Visa was awarded to me in Fall 2017 and I moved to Houston, Texas in December 2017 to start my college life. 
+I lived my whole life in Mexico until I started my college education in 2018. I applied for an International Student Visa to study Computer Science at <a href="https://www.lonestar.edu/northharris.htm">Lone Star College North Harris</a>, which is located in Houston, Texas. 
 I graduated from Lone Star College in Fall 2019, I obtained a Associate of Science Degree in Computer Science. 
 After I graduated from Lone Star College I transferred to <a href="https://www.tamu.edu/">Texas A&M University</a> in <a href="https://www.experiencebcs.com/">College Station, Texas</a>. I transferred to start the Spring 2020 semester to major in Technology Management; it has been one of the best experiences I have had so far in my life.
-As an international student I have had difficult times being far from my family. I have two older siblings that were former Aggies, both of them live in Texas too, but it is difficult to see them regularly because of the schedules we all have. 
-Both of my parents live in Mexico. They have worked really hard in order to support me during the time I have been here, and I think that I have been able to give some of their support back with the effort I have put into my education. 
 </p> 
 
 <p>
-I hope you enjoy my website!
+I hope you enjoyed my page!
 </p>
 <hr style = "width: 70%">
 <center>
