--- a/darren.html
+++ b/darren.html
@@ -24,7 +24,7 @@
 			<font size="+3" color="navy">
 			<p style="font-family:times">Welcome to my TCMG 412 website</p></font>
 			<font size="+2" color="purple"><p style="font-family:arial">My name is Darren Guzman</p></font>
-			<font size="+2" color="teal"><p style="font-family:courier">Thank you for visiting my web site!<br>I hope you enjoy it...</br></p></font></td>
+			<font size="+2" color="teal"><p style="font-family:courier">Arsenal is the best football club in the world!<br>I hope you enjoy it...</br></p></font></td>
       <td><img src="arsenal_1.png" width="223" height="300" alt=""/></td>
     </tr>
     <tr>
