--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <nav>
 <center>
 	<a href="index.html">~Home Page~</a> |
-	<a href="jcharnas.html">~Jalen~</a>
-	<a href="jcharnas01.html">~Darren~</a>
+	<a href="jcharnas.html">~Jalen~</a> |
+	<a href="jcharnas01.html">~Darren~</a> |
 	<a href="Gio.html">~Gio~</a> |
-	<a href="Cade.html">~Cade~</a>
+	<a href="Cade.html">~Cade~</a> |
 	<a href="jcharnas01.html">~Henry~</a>
 </center>
 </nav>
