--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <center>
 	<a href="index.html">~Home Page~</a> |
 	<a href="jcharnas.html">~Jalen~</a> |
-	<a href="jcharnas01.html">~Darren~</a> |
+	<a href="darren.html">~Darren~</a> |
 	<a href="Gio.html">~Gio~</a> |
 	<a href="Cade.html">~Cade~</a> |
 	<a href="jcharnas01.html">~Henry~</a>
