--- a/darren.html
+++ b/darren.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Darren's Page for the site </title>
+<title>Darren's Page for the TCMG 412 Lab </title>
 </head>
 <body style = "background-color:gainsboro;"> 
 <body>
