--- a/darren.html
+++ b/darren.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Darren's Page for the TCMG 412 Lab </title>
+<title>Darren's Page for the site </title>
 </head>
 <body style = "background-color:gainsboro;"> 
 <body>
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td>&nbsp;</td>
-      <td><img src="arsenal2.png" width="611" height="106" alt=""/></td>
+      <td><img src="htmlpics/arsenal2.png" width="611" height="106" alt=""/></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -19,13 +19,13 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td><img src="arsenal_1.png" width="223" height="300" alt=""/></td>
+      <td><img src="htmlpics/arsenal_1.png" width="223" height="300" alt=""/></td>
 		<td align="center"><font size="+6" color="maroon"><p style="font-family:verdana">Howdy!</p></font>
 			<font size="+3" color="navy">
 			<p style="font-family:times">Welcome to my TCMG 412 website</p></font>
 			<font size="+2" color="purple"><p style="font-family:arial">My name is Darren Guzman</p></font>
 			<font size="+2" color="teal"><p style="font-family:courier">Arsenal is the best football club in the world!<br>I hope you enjoy it...</br></p></font></td>
-      <td><img src="arsenal_1.png" width="223" height="300" alt=""/></td>
+      <td><img src="htmlpics/arsenal_1.png" width="223" height="300" alt=""/></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
