correctly pointed the files to the correct path
jalens images should be showing up on his site

--- a/jcharnas.html
+++ b/jcharnas.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td>&nbsp;</td>
-      <td><img src="techmanage.png" width="600" height="100" alt=""/></td>
+      <td><img src="html/techmanage.png" width="600" height="100" alt=""/></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -19,14 +19,14 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td><img src="deca.jpg" width="300" height="300" alt=""/></td>
+      <td><img src="htmlpics/deca.jpg" width="300" height="300" alt=""/></td>
 		<td align="center"><font size="+8" color="blue"><p>Hello!</p></font>
 			<font size="+4" color="red">
 			<p>Welcome to my website</p></font>
 			<font size="+2" color="green"><p>My name is Jalen C.</p></font>
 
 			<font size="+2" color="green"><p>Thank you for visiting my web site.. have a nice day.</p></font></td>
-      <td><img src="th18.jpg" width="250" height="300" alt=""/></td>
+      <td><img src="htmlpics/th18.jpg" width="250" height="300" alt=""/></td>
     </tr>
     <tr>
       <td>&nbsp;</td>
