--- a/jcharnas.html
+++ b/jcharnas.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td>&nbsp;</td>
-      <td><img src="html/techmanage.png" width="600" height="100" alt=""/></td>
+      <td><img src="htmlpics/techmanage.png" width="600" height="100" alt=""/></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
