--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html>
 <head>
 <meta charset="utf-8>
@@ -18,7 +18,7 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 		</tr>
-	</tdbody>
+	</tbody>
 </table>
 </body>
 </html>
