--- a/Cade.html
+++ b/Cade.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-2 col-sm-12 col-xs-12">
             <nav id="navbar">
-                <h3>Technical Documentation</h3>
+                <h3>Cade Johnston</h3>
                 <!--content stacking for smaller screens-->
                 <ul class="nav nav-pills nav-stacked">
                  <!--internal linking to the respective sections-->
@@ -35,31 +35,18 @@
                  <!--basic styling for the headings, better practice to do the same in a css file as the styling is same for all headers-->
                     <h3 style = "background: black; color: white">Introduction</h3>
                     <article>
-                    <p>Some content about the main topic, for example Java documentation introduction about the language
+                    <p>Welcome to my html page, hope you enjoy!
                         </article>
                 </section>
                 <section class="main-section" id="What_you_should_already_know">
                     <h3 style = "background: black; color: white">What you should already know</h3>
                     <article>
-                        <p>Background information before getting into the topic:</p>
+                        <p>What I like to do!</p>
 <!--creating list using html-->
-                        <li>Some list content</li>
-                        <li>Prerequisites.</li>
-                        <li>Workings and assumptions</li>
-                        <p>Any other content to be covered before learning this topic</p>
+                        <li>Read</li>
+                        <li>Workout</li>
+                        <li>Eat</li>
                         </artice>
-                </section>
-                <section class="main-section" id="About_Topic">
-                    <h3 style = "background: black; color: white">About topic</h3>
-                    <article>
-                        <p>More lines about the topic. For example, how the basic functionality works, features etc...</p>
-                        <p>
-                        Technical documentation should be thorough and to the point
-                        </p>
-                        <p>
-                        Write about features, comparisons with other languages etc
-                        </p>
-                    </article>
                 </section>
                 <section class="main-section" id="Topic_1">
                     <h3 style = "background: black; color: white">Topic 1</h3>
