--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8>
 <title>Sharks </title> 
 </head> 
-<body style = "background-color:gainsboro;"> 
 <body> 
 <table width="200" border="0" align="center">
 	<tbody>
 		<tr>
 			<td>&nbsp;</td>
-			<td><img src="Shark1.jpg" width="611" height="106" alt=""/></ted>
+			<td><img src="Shark1.jpg" width="611" height="106" alt=""/></td>
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
