--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!doctype html>
 <html>
 <head>
 <meta charset="utf-8>
@@ -16,6 +16,11 @@
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
 			<td>&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="cener"><font size=+6> color="maroon><p style="font-family:verdana">Shark Facts</p></font>
+				<font size="+3" color="navy">
+				<p style ="font-family:times">Some sharks need to constantly move to stay alive</p></font>
 		</tr>
 	</tbody>
 </table>
