--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<a href="darren.html">~Darren~</a> |
 	<a href="Gio.html">~Gio~</a> |
 	<a href="Cade.html">~Cade~</a> |
-	<a href="H3nryn09.html">~Henry~</a> |
+	<a href="h3nryn09.html">~Henry~</a> |
 </center>
 </nav>
 <hr style = "width: 70%">
