--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -10,7 +10,7 @@
 	<tbody>
 		<tr>
 			<td>&nbsp;</td>
-			<td><img src="Shark1.jpg" width="611" height="106" alt=""/></td>
+			<td><img src="Shark1.jpg" width="600" height="100" alt=""/></td>
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
@@ -19,14 +19,14 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td align="cener"><font size=+6> color="maroon><p style="font-family:verdana">Shark Facts</p></font>
+			<td align="center"><font size=+6> color="maroon"><p style="font-family:verdana">Shark Facts</p></font>
 				<font size="+3" color="navy">
 				<p style ="font-family:times">Some sharks need to constantly move to stay alive</p></font>
 		</tr>
 		<tr>
       			<td>&nbsp;</td>
       			<td>&nbsp;</td>
-	  			<td>&nbsp;</td>
+	  		<td>&nbsp;</td>
     		</tr>
 	</tbody>
 </table>
