--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -19,7 +19,7 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td align="center"><font size=+6> color="maroon"><p style="font-family:verdana">Shark Facts</p></font>
+			<td align="center"><font size=+6 color="maroon"><p style="font-family:verdana">Shark Facts</p></font>
 				<font size="+3" color="navy">
 				<p style ="font-family:times">Some sharks need to constantly move to stay alive</p></font>
 		</tr>
