--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -19,9 +19,11 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td align="center"><font size="+6" color="maroon"><p style="font-family:verdana">Shark Facts</p></font>
+			<td align="center"><font size="+6" color="red"><p style="font-family:verdana">Shark Facts</p></font>
 				<font size="+3" color="navy">
 				<p style ="font-family:times">Some sharks need to constantly move to stay alive</p></font>
+				<font size="+3" color="navy"><p style="font-family:arial"> Sharks do not have bones, but can still fossilize</p></font>
+				<font size="+3" color="navy"><p style="font-family:arial"> If a shark is flipped upside down, they go into a trance state</br></p></font></td>
 		</tr>
 		<tr>
       			<td>&nbsp;</td>
