--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -23,7 +23,7 @@
 				<font size="+3" color="navy">
 				<p style ="font-family:times">Some sharks need to constantly move to stay alive</p></font>
 				<font size="+3" color="navy"><p style="font-family:arial"> Sharks do not have bones, but can still fossilize</p></font>
-				<font size="+3" color="navy"><p style="font-family:arial"> If a shark is flipped upside down, they go into a trance state</br></p></font></td>
+				<font size="+3" color="navy"><p style="font-family:arial"> If a shark is flipped upside down, they go into a trance state</p></font></td>
 		</tr>
 		<tr>
       			<td>&nbsp;</td>
