--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -20,9 +20,13 @@
 		</tr>
 		<tr>
 			<td align="center"><font size="+6" color="red"><p style="font-family:verdana">Shark Facts</p></font>
-				<font size="+20" color="navy"><p style ="font-family:arial">Some sharks need to constantly move to stay alive
-				 Sharks do not have bones, but can still fossilize
-				 If a shark is flipped upside down, they go into a trance state</p></font></td>
+		</tr>
+		<tr>
+			<p>
+				Some sharks need to constantly move to stay alive
+				Sharks do not have bones, but can still fossilize
+				If a shark is flipped upside down, they go into a trance state</p></font></td>
+			</p>
 		</tr>
 		<tr>
       			<td>&nbsp;</td>
