--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -10,7 +10,7 @@
 	<tbody>
 		<tr>
 			<td>&nbsp;</td>
-			<td><img src="Shark1.jpg" width="600" height="100" alt=""/></td>
+			<td><img src="htmlpics/Shark1.jpg" width="600" height="100" alt=""/></td>
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
