--- a/Gio.html
+++ b/Gio.html
@@ -23,8 +23,8 @@
 
 <hr style = "width: 70%">
 <center>
-<img src="Gio.png" alt="A picture of myself holding a basketball" style="width:230px;height:300px;">
-<img src="G.jpg" alt="A picture of myself" style="width:300px;height:300px;">
+<img src="htmlpics/Gio.png" alt="A picture of myself holding a basketball" style="width:230px;height:300px;">
+<img src="htmlpics/G.jpg" alt="A picture of myself" style="width:300px;height:300px;">
 </center>
 
 <br>
