--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -19,12 +19,12 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td><img> src="htmlpics/Shark2.jpg" width="223" height="300" alt=""/></td>
+			<td><img src="htmlpics/Shark2.jpg" width="223" height="300" alt=""/></td>
 			<td align="center"><font size="+6" color="red"><p style="font-family:verdana">Shark Facts</p></font>
 			<font size="+2" color="navy"><p style="font-family:arial">Some sharks need to constantly move to stay alive</p></font>
 			<font size="+2" color="navy"><p style="font-family:arial"> Sharks do not have bones, but can still fossilize</p></font>
 			<font size="+2" color="navy"><p style="font-family:arial"> If a shark is flipped upside down, they go into a trance state</p></font></td>
-			<td><img> src="htmlpics/Shark3.jpg" width="223" height="300" alt=""/></td>
+			<td><img src="htmlpics/Shark3.jpg" width="223" height="300" alt=""/></td>
 		</tr>
 		<tr>
       			<td>&nbsp;</td>
