--- a/h3nryn09.html
+++ b/h3nryn09.html
@@ -23,6 +23,11 @@
 				<td align="center"><font size="+6" color="red"><p style="font-family:verdana">Shark Facts</p></font>
 					<font size="+2" color="navy"><p style="font-family:arial">Some sharks need to constantly move to stay alive</p></font>
 					<font size="+2" color="navy"><p style="font-family:arial"> Sharks do not have bones, but can still fossilize</p></font>
+					<font size="+2" color="navy"><p style="font-family:arial"> Sharks have lived for a long time, dating back to dinosaurs</p></font>
+					<font size="+2" color="navy"><p style="font-family:arial"> The Whale Shark is the largest living fish on the planet</p></font>
+					<font size="+2" color="navy"><p style="font-family:arial"> Sharks can have up to 300 or more teeth</p></font>
+					<font size="+2" color="navy"><p style="font-family:arial"> You are more likely to be killed by fireworks than a shark</p></font>
+					<font size="+2" color="navy"><p style="font-family:arial"> There are over 500 species of sharks</p></font>
 					<font size="+2" color="navy"><p style="font-family:arial"> If a shark is flipped upside down, they go into a trance state</p></font></td>
 			<td><img src="htmlpics/Shark3.jpg" width="223" height="300" alt=""/></td>
 		</tr>
